...
                    style="@style/labels_eff_calc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/enter_company_name" />

                <EditText
                    android:id="@+id/enter_company_name_et"
                    style="@style/enter_text_style"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/enter_company_name"
                    android:text="@={livedata.compid}" />
...
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/column_speed_imp" />

                <EditText
                    android:id="@+id/column_speed_et"
                    style="@style/enter_text_style"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:ems="10"
                    android:inputType="numberDecimal"
...
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="3"
                    android:text="@string/enter_material_area_imp" />

                <EditText
                    android:id="@+id/ax_material_section"
                    style="@style/enter_text_style"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="numberDecimal"
...
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/auger_speed_imp" />

                <EditText
                    android:id="@+id/auge_speed_et"
                    style="@style/enter_text_style"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="numberDecimal"
...
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/efficiency"
                    android:textAlignment="textStart" />

                <TextView
                    android:id="@+id/efficiency_tv"
                    style="@style/labels_eff_calc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@={Converter.doubleToString(livedata.eff)}"
                    android:textSize="32sp" />

...
